--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,3 +60,13 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+
+# Written by me
+# ~~~~~~~~~~~~~
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="mysql://heigredoux:heigredoux@localhost/heigredoux"
+
+logger.scala.slick.jdbc.JdbcBackend.statement=DEBUG
+
+# Automatic Evolutions Generation
+# slick.default="models.*"
