--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,4 +69,4 @@ db.default.url="mysql://heigredoux:heigredoux@localhost/heigredoux"
 logger.scala.slick.jdbc.JdbcBackend.statement=DEBUG
 
 # Automatic Evolutions Generation
-# slick.default="models.*"
+slick.default="models.*"
