--- a/conf/config.sample.properties
+++ b/conf/config.sample.properties
@@ -1,7 +1,5 @@
 url=http://intra.heig-vd.ch/campus/cafeterias/Pages/menusetprix.aspx
 domain=
-user=
-password=
-path=
-logs=
-directory=
+user=prenom.nom@heig-vd.ch
+password=password
+directory=menus
