Nutriments Table, refactor DB, Improved Client, Downloading and Inserting Menus

--- a/conf/config.sample.properties
+++ b/conf/config.sample.properties
@@ -1,5 +1,5 @@
 url=http://intra.heig-vd.ch/campus/cafeterias/Pages/menusetprix.aspx
 domain=
-user=prenom.nom@heig-vd.ch
+user=prenom.nom
 password=password
 directory=menus
